--- a/index.html
+++ b/index.html
@@ -91,14 +91,38 @@
     <h2>@header</h2>
 
     <header>
-        <img src=" /">
+        <img src="images/hero.svg">
         <h1>heading inside hero</h1>
     </header>
 
-        
+    <hr>
 
-    <div style="height: 30vh;">
-        
-    </div>
+    <h2>@section</h2>
+    <section>
+        <h3>white section</h3>
+        <p>This will have white background</p>
+    </section>
+
+    <section>
+        <h3>off white section</h3>
+        <p>This will have gray background</p>
+    </section>
+
+    <hr>
+
+    <h2>@footer</h2>
+
+    <footer>
+        <div>some small heading inside footer</div>
+        <ul>
+            <li>socialOne</li>
+            <li>socialTwo</li>
+            <li>socialThree</li>
+        </ul>
+    </footer>
+
+
+
+    <!-- <div style="height: 30vh;"></div> -->
 </body>
 </html>
