css: import and selectors

--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+
+    <!-- CSS way 1: style tag
+
+    <style>
+        body{
+            color: brown;
+            background-color: cadetblue;
+        }
+    </style> -->
+
+    <!-- CSS way 3: external link -->
+    <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>tusharsahu's component library</h1>
-    <p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.</p>
+    <!-- CSS way 2: style tag
+    
+    <h1 style="color: red;">tusharsahu's component library</h1> -->
+
+    <h1 id="lib-header">tusharsahu's component library</h1>
+    <p class="para">I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.</p>
 
     <hr>
 
@@ -16,7 +32,7 @@
 
     <h1>This is the biggest heading.</h1>
     <h2>This is the second biggest.</h2>
-    <p>Let me show you the normal text. This is free flowing and will wrap at the end like a paragraph. </p>
+    <p class="para-typography">Let me show you the normal text. This is free flowing and will wrap at the end like a paragraph. </p>
     <small>This is relatively smaller text</small>
 
     <hr>
@@ -24,7 +40,7 @@
     <h2>@container</h2>
 
     <h3>fluid container</h3>
-    <div>This is a fluid container and it will go till the end of the page</div>
+    <div class="die">This is a fluid container and it will go till the end of the page</div>
     <h3>center container</h3>
     <div>This is a centered container and it will go till the specified width</div>
 
