--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     
     <h1 style="color: red;">tusharsahu's component library</h1> -->
 
-    <h1 id="lib-header">tusharsahu's component library</h1>
-    <p class="para">I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.</p>
+    <h1>tusharsahu's component library</h1>
+    <p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.</p>
 
     <hr>
 
@@ -32,7 +32,8 @@
 
     <h1>This is the biggest heading.</h1>
     <h2>This is the second biggest.</h2>
-    <p class="para-typography">Let me show you the normal text. This is free flowing and will wrap at the end like a paragraph. </p>
+    <p>Let me show you the normal text. This is free flowing and will wrap at the end like a paragraph. </p>
+    <p>This paragraph will have a <strong>bold</strong> text</p>
     <small>This is relatively smaller text</small>
 
     <hr>
@@ -40,7 +41,7 @@
     <h2>@container</h2>
 
     <h3>fluid container</h3>
-    <div class="die">This is a fluid container and it will go till the end of the page</div>
+    <div>This is a fluid container and it will go till the end of the page</div>
     <h3>center container</h3>
     <div>This is a centered container and it will go till the specified width</div>
 
