--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <h2>@container</h2>
 
     <h3>fluid container</h3>
-    <div>This is a fluid container and it will go till the end of the page</div>
+    <div class="container-fluid">This is a fluid container and it will go till the end of the page</div>
     <h3>center container</h3>
-    <div>This is a centered container and it will go till the specified width</div>
+    <div class="container-center">This is a centered container and it will go till the specified width</div>
 
     <hr>
 
