--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
     <h2>@container</h2>
 
     <h3>fluid container</h3>
-    <div class="container-fluid">This is a fluid container and it will go till the end of the page</div>
+    <div class="container">This is a fluid container and it will go till the end of the page</div>
     <h3>center container</h3>
-    <div class="container-center">This is a centered container and it will go till the specified width</div>
+    <div class="container container-center">This is a centered container and it will go till the specified width</div>
 
     <hr>
 
     <h2>@links</h2>
 
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    <a class="link primary-link" href="/">Primary Link</a>
+    <a class="link link-secondary" href="/">Secondary Link</a>
 
     <hr>
     
