doc: list reversed

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </ol>
 
     <h3>reverse ordered list</h3>
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>eggs</li>
         <li>bread</li>
