--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
 
     <h2>@footer</h2>
 
-    <footer>
-        <div>some small heading inside footer</div>
-        <ul>
-            <li>socialOne</li>
-            <li>socialTwo</li>
-            <li>socialThree</li>
+    <footer class="footer">
+        <div class="footer-header">some small heading inside footer</div>
+        <ul class="social-link list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="/">socialOne</a></li>
+            <li class="list-item-inline"><a class="link" href="/">socialTwo</a></li>
+            <li class="list-item-inline"><a class="link" href="/">socialThree</a></li>
         </ul>
     </footer>
 
