--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container container-center">
             <h1>projects</h1>
             <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
-            <a class="link primary-link" href="/">See Projects</a>
+            <a class="link primary-link" href="/projects.html">See Projects</a>
         </div>
         
     </section>
@@ -50,7 +50,7 @@
         <div class="container container-center">
             <h1>blogs</h1>
             <p>I'm also working on some technical and non technical blogs. I like to document my journey of learning.</p>
-            <a class="link link-secondary" href="/">Read Blogs</a>
+            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
         </div>
         
     </section>
