--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
             <small>september, 2021</small>
             <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who really knows you</p>
 
-            <a class="link primary-link" href="https://replit.com/@TusharSahu3">Live Project</a>
+            <a class="link primary-link" href="https://replit.com/@TusharSahu3/FrndQuiz#index.js?embed=1&output=1">Live Project</a>
             <a class="link link-secondary" href="https://github.com/tushar4g/FriendQuiz">View Source</a>
             </div>
             
