add footer into rest of the page

--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,15 @@
     </ul>
 
 
+    <footer class="footer">
+        <div class="footer-header">social media presence</div>
+        <ul class="social-link list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="https://github.com/tushar4g">github</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.instagram.com/tushar_str4/">instagram</a></li>
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/TusharStr4">twitter</a></li>
+        </ul>
+    </footer>
+
 
 </body>
 </html>
