--- a/blogs.html
+++ b/blogs.html
@@ -28,5 +28,16 @@
         <h2>This is your assignment to get <a href="https://neog.camp/qualifier/nine-point">markFive</a></h2>
     </header>
 
+
+    <footer class="footer">
+        <div class="footer-header">social media presence</div>
+        <ul class="social-link list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="https://github.com/tushar4g">github</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.instagram.com/tushar_str4/">instagram</a></li>
+            <li class="list-item-inline"><a class="link" href="https://twitter.com/TusharStr4">twitter</a></li>
+        </ul>
+    </footer>
+
+
 </body>
 </html>
