make div column in projects

--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,12 @@
         <header class="hero">
             <h1 class="hero-heading">see my<span style="color: var(--primary-color);"> code</span>  </h1>
         </header>
+
+        <div class="row">
+            <div class="column left"><p>Young Biniya lives a poor lifestyle in a small village in the mountainous and snowy region of Himachal Pradesh in India along with her widowed mom and wrestler brother. She entertains various tourists, and while doing so with some tourists from Japan, trades in her bear-tooth amulet with a blue umbrella.</p></div>
+            <div class="column middle"><p>Young Biniya lives a poor lifestyle in a small village in the mountainous and snowy region of Himachal Pradesh in India along with her widowed mom and wrestler brother. She entertains various tourists, and while doing so with some tourists from Japan, trades in her bear-tooth amulet with a blue umbrella.</p></div>
+            <div class="column right"><p>Young Biniya lives a poor lifestyle in a small village in the mountainous and snowy region of Himachal Pradesh in India along with her widowed mom and wrestler brother. She entertains various tourists, and while doing so with some tourists from Japan, trades in her bear-tooth amulet with a blue umbrella.</p></div>
+        </div>
     
         <ul class="list-non-bullet">
             
