--- a/blogs.html
+++ b/blogs.html
@@ -10,7 +10,8 @@
 <body>
     
     <nav class="navigation container">
-        <div class="nav-brand">IAMDEVELOPER</div>
+        <div class="nav-brand"><a class="link link-active" href="/">IAMDEVELOPER</a>
+        </div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/">home</a>
