--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     </nav>
 
     <main class="main-about">
-
+        <script src="index.js"></script>
     </main>
 
     <footer class="footer about-us">
