--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-    
+    <script src="js/example.js"></script>
     <nav class="navigation container">
         <div class="nav-brand">
         <a class="link link-active" href="/">IAMDEVELOPER</a>
