learn element selector in example.js

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-    <script src="js/example.js"></script>
-    <nav class="navigation container">
-        <div class="nav-brand">
-        <a class="link link-active" href="/">IAMDEVELOPER</a>
+    
+    <nav id="navContainer"  class="navigation container">
+        <div id="brand" class="nav-brand">
+        <a  class="link link-active" href="/">IAMDEVELOPER</a>
         </div>
-        <ul class="list-non-bullet nav-pills">
+        <ul id="ulList" class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/">home</a>
             </li>
@@ -29,7 +29,7 @@
         </ul>
     </nav>
 
-    <main>
+    <main id="man">
         <header class="hero">
             <img class="hero-img" src="/images/hero.svg">
             <h1 class="hero-heading">heading inside <span style="color: var(--primary-color);">hero</span>  </h1>
@@ -77,7 +77,7 @@
     </footer>
 
 
-
-
 </body>
+<script src="js/example.js"></script>
+
 </html>
