created element tag and append it

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <h1 class="hero-heading">heading inside <span style="color: var(--primary-color);">hero</span>  </h1>
         </header>
     
-        <section class="section ow">
-            <div class="container container-center">
+        <section id="tech" class="section ow">
+            <div id="techDiv" class="container container-center tecdiv">
                 <h1>technologies</h1>
-                <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS and Web Hosting.</p>
+                <p class="para">I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS and Web Hosting.</p>
             </div>
             
         </section>
