something is edited

--- a/about.html
+++ b/about.html
@@ -30,6 +30,10 @@
 
     <main class="main-about">
         <script src="index.js"></script>
+        <form>
+            Search: <input type="text" name="Hello" id="">
+            <input type="button" value="submit">
+        </form>
     </main>
 
     <footer class="footer about-us">
