--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
         <section id="tech" class="section ow">
             <div id="techDiv" class="container container-center tecdiv">
-                <h1>technologies</h1>
+                <h1 id="tech-head" class="tsch-class">technologies</h1>
                 <p class="para">I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS and Web Hosting.</p>
             </div>
             
